kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teloo-production
  labels:
    name: teloo-production
    environment: production
